fixed broken css in desktop

--- a/css/style.css
+++ b/css/style.css
@@ -101,11 +101,19 @@ a {
     margin-top: 5px;
 }
 
+.onClickInfo {
+    grid-row: 1;
+    grid-column: 2 / 4;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
 .buttonContainer {
     grid-row: 1;
-    grid-column: 3;
+    grid-column: 2;
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
     margin: 10px;
 }
 .cardButton {
@@ -118,10 +126,10 @@ a {
 }
 .userInfo {
     grid-row: 2;
-    grid-column: 2;
+    grid-column: 1;
     background-color: var(--brand-color);
     color: var(--white);
-    margin: 5px;
+    padding: 10px;
 }
 
 @media only screen and (max-width: 480px) {
